@@ -60,6 +60,8 @@ the documentation.
   * Sift: added support for curve data with error bars (I/O + operations + processing)
   * Added coding guidelines to the documentation
   * builder/make.computation/computation2d: added title option (defaults to object's (curve or image) label)
+  * plot.!CurvePlot, plot.!CurveWidget: added keyword arguments 'xunit' and 'yunit' to set axes units (same syntax as labels)
+  * plot.!ImagePlot, plot.!ImageWidget: added keyword arguments 'xunit', 'yunit' and 'zunit' to set axes units (same syntax as labels)
 
 ----
 
